--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,7 +78,7 @@
           <div class="container">
             <div class="mod-menu">
               <div class="row">
-                <div class="col-sm-2"> <a href="index.html" title="" class="logo mar-4"> <img
+                <div class="col-sm-2"> <a href="#main" title="" class="logo smoothscroll mar-4"> <img
                       src="images/logo/logoGZ.png" alt=""> </a> </div>
                 <div class="col-sm-10">
                   <div class="main-nav">
@@ -418,10 +418,9 @@
     <div class="sec-padding section-fulldark">
       <div class="container">
         <div class="row">
-          <div class=" col-md-12 col-centered text-center"> <img src="images/logo/logo.png" alt=""/>
+          <div class=" col-md-12 col-centered text-center"> <img src="images/logo/logoGZ-black.png" alt=""/>
             <div class="clearfix"></div>
-            <br/>
-            <br/>
+            <div class="clearfix"></div>
 
             <div class="divider-line solid light opacity-1"></div>
             <ul class="footer-social-icons round">
